--- a/main_win.ui
+++ b/main_win.ui
@@ -514,7 +514,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="pushButtonHelp">
            <property name="text">
             <string>Help</string>
            </property>
