--- a/main_win.ui
+++ b/main_win.ui
@@ -483,7 +483,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
-         <string>GroupBox</string>
+         <string/>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
