--- a/main_win.ui
+++ b/main_win.ui
@@ -463,7 +463,11 @@
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
          <item row="0" column="0">
-          <widget class="QListWidget" name="listWidgetMessages"/>
+          <widget class="QTextEdit" name="textEditMessage">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
